traversal.snake.Snake.scala.error
Compilation error:
Snake:9: error: ';' expected but '(' found.
      right();forward():right()
                             ^