traversal.snake.Snake.scala.code
override def run() {
  brushDown();
  while (!isFacingWall()) {
    forward();
    if (isFacingWall() && getDirection==Direct.EAST) {
      left();forward();left()
    }
    else if (isFacingWall() && getDirection==Direction.WEST) {
      right();forward():right()
    }
  }
}